WIP: integrate modifications

--- a/notebooks/210106 Data Preparation.ipynb
+++ b/notebooks/210106 Data Preparation.ipynb
@@ -1090,6 +1090,7 @@
    "outputs": [],
    "source": [
     "# drop non-AA characters\n",
+    "# highly questionable, because information gets lost\n",
     "mgf_df.seq = mgf_df.seq.str.replace(r\"[^A-Z]\",'')"
    ]
   },
