WIP: add modifications to data filtering and training

--- a/notebooks/210330 Parallelized Data Filtering Pipeline.ipynb
+++ b/notebooks/210330 Parallelized Data Filtering Pipeline.ipynb
@@ -5,7 +5,7 @@
    "id": "lovely-landing",
    "metadata": {},
    "source": [
-    "# Data Filtering Pipeline\n",
+    "# Parallelized Data Filtering Pipeline\n",
     "## Prerequisites"
    ]
   },
