WIP: refactor ML data preprocessing

--- a/notebooks/210415 Prototyping an ML Model with TFDatasets.ipynb
+++ b/notebooks/210415 Prototyping an ML Model with TFDatasets.ipynb
@@ -19,7 +19,7 @@
     "import gc\n",
     "import glob\n",
     "import os\n",
-    "from typing import Iterable, Callable, Dict, Any, Tuple\n",
+    "from typing import Iterable, Callable, Dict, Any, Tuple, Optional, List, Union\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -353,7 +353,7 @@
        "      <td>../dumps/PXD010000/training_columns/Biodiversity_B_fragilis_01_28Jul15_Arwen_14-12-03_mzmlid.parquet</td>\n",
        "      <td>50</td>\n",
        "      <td>1845</td>\n",
-       "      <td>{M, K, T, P, C, Q, E, H, R, F, N, W, A, M(Oxidation), V, S, I, Y, G, D, L}</td>\n",
+       "      <td>{G, I, T, R, M(Oxidation), L, K, N, P, W, Y, M, F, E, V, S, A, D, C, Q, H}</td>\n",
        "      <td>26943</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -361,7 +361,7 @@
        "      <td>../dumps/PXD010000/training_columns/Biodiversity_A_faecalis_LB_aerobic_03_26Feb16_Arwen_16-01-01_mzmlid.parquet</td>\n",
        "      <td>49</td>\n",
        "      <td>1082</td>\n",
-       "      <td>{M, K, T, P, C, Q, E, H, R, F, N, W, A, M(Oxidation), V, S, I, Y, G, D, L}</td>\n",
+       "      <td>{G, I, T, R, M(Oxidation), L, K, N, P, W, Y, M, F, E, V, S, A, D, C, Q, H}</td>\n",
        "      <td>16723</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -378,8 +378,8 @@
        "1                   49              1082   \n",
        "\n",
        "                                                                     alphabet  \\\n",
-       "0  {M, K, T, P, C, Q, E, H, R, F, N, W, A, M(Oxidation), V, S, I, Y, G, D, L}   \n",
-       "1  {M, K, T, P, C, Q, E, H, R, F, N, W, A, M(Oxidation), V, S, I, Y, G, D, L}   \n",
+       "0  {G, I, T, R, M(Oxidation), L, K, N, P, W, Y, M, F, E, V, S, A, D, C, Q, H}   \n",
+       "1  {G, I, T, R, M(Oxidation), L, K, N, P, W, Y, M, F, E, V, S, A, D, C, Q, H}   \n",
        "\n",
        "   item_count  \n",
        "0       26943  \n",
@@ -442,43 +442,21 @@
    "outputs": [],
    "source": [
     "def l2_normalize(values: np.ndarray) -> np.ndarray:\n",
-    "    return tf.keras.utils.normalize(x=values, order=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "finnish-throw",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return tf.keras.utils.normalize(x=values, order=2)\n",
+    "\n",
     "def base_peak_normalize(values: np.ndarray) -> np.ndarray:\n",
-    "    return values / values.max(initial=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "floating-witch",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return values / values.max(initial=0)\n",
+    "\n",
     "# by Tom, probably\n",
     "# don't know, what it's based on\n",
-    "def ion_current_normalize(intensities):\n",
+    "def ion_current_normalize(intensities: np.ndarray) -> np.ndarray:\n",
     "    total_sum = np.sum(intensities**2)\n",
     "    normalized = intensities/total_sum\n",
-    "    return normalized"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "funky-power",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "NORMALIZATION=base_peak_normalize"
+    "    return normalized\n",
+    "\n",
+    "NORMALIZATION = {\n",
+    "    INT: base_peak_normalize\n",
+    "}"
    ]
   },
   {
@@ -569,91 +547,150 @@
    "source": [
     "# TODO: Transform to class\n",
     "\n",
-    "def normalize_intensities(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    df = df.copy()\n",
-    "    df[INT] = df[INT].apply(NORMALIZATION)\n",
-    "    return df\n",
+    "PADDING_LENGTHS = {\n",
+    "    MZ: MAX_ARRAY_LENGTH,\n",
+    "    INT: MAX_ARRAY_LENGTH,\n",
+    "    SEQ: MAX_SEQUENCE_LENGTH\n",
+    "}\n",
     "\n",
-    "# unnecessary, should be merged with pad_array_columns #TODO\n",
-    "def pad_sequence_column(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    df = df.copy()\n",
-    "    df[SEQ] = list(tf.keras.preprocessing.sequence.pad_sequences(\n",
-    "        sequences=df[SEQ], \n",
-    "        maxlen=MAX_SEQUENCE_LENGTH,\n",
-    "        padding='post', \n",
-    "        value=PADDING_CHARACTERS[SEQ],\n",
-    "        dtype=object\n",
-    "    ))\n",
-    "    return df\n",
+    "class Parquet2DatasetFileProcessor:\n",
     "\n",
-    "def pad_array_columns(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    df = df.copy()\n",
-    "    for col in ARRAY_COLS:\n",
-    "        if len(df[col]) == 0:\n",
-    "            continue\n",
-    "        item_dtype = df[col].iloc[0].dtype\n",
+    "    def __init__(self,\n",
+    "                 training_data_columns: List[str],\n",
+    "                 target_data_columns: List[str],\n",
+    "                 padding_lengths: Dict[str, int],\n",
+    "                 padding_characters: Dict[str, Union[str, int, float]],\n",
+    "                 column_normalizations: Dict[str, Callable[[Any], Any]],\n",
+    "                 char_to_idx_mappers: Optional[Dict[str, Dict[str, int]]] = None,\n",
+    "                 char_to_idx_mapping_functions: Optional[Dict[str, Callable[[str], int]]] = None,\n",
+    "                 item_count: int = 0,\n",
+    "                 dataset_dump_path: str = DATASET_DUMP_PATH,\n",
+    "                 training_columns_dump_path: str = TRAINING_COLUMNS_DUMP_PATH,\n",
+    "                 logger: log.Logger = logger\n",
+    "                 ):\n",
+    "        self.training_data_columns = training_data_columns\n",
+    "        self.target_data_columns = target_data_columns\n",
+    "        self.padding_lengths = padding_lengths\n",
+    "        self.padding_characters = padding_characters\n",
+    "        self.column_normalizations = column_normalizations\n",
+    "        self.char_to_idx_mapping_functions = char_to_idx_mapping_functions\n",
+    "        if self.char_to_idx_mapping_functions is None:\n",
+    "            assert char_to_idx_mappers is not None, \\\n",
+    "                \"either char_to_idx_mappers or char_to_idx_mapping_functions must be given\"\n",
+    "            self.char_to_idx_mapping_functions = {\n",
+    "                column: mapping.get for column, mapping in char_to_idx_mappers.items()\n",
+    "            }\n",
+    "        self.item_count = item_count\n",
+    "        self.dataset_dump_path = dataset_dump_path\n",
+    "        self.training_columns_dump_path = training_columns_dump_path\n",
+    "        self.char_idx_dtype = np.int8\n",
+    "        self.logger = logger\n",
     "\n",
-    "        df[col] = list(tf.keras.preprocessing.sequence.pad_sequences(\n",
-    "            sequences=df[col], \n",
-    "            maxlen=MAX_ARRAY_LENGTH, \n",
-    "            padding='post', \n",
-    "            value=PADDING_CHARACTERS[col],\n",
-    "            dtype=item_dtype\n",
-    "        ))\n",
-    "    return df\n",
+    "    def normalize_columns(self, df: pd.DataFrame) -> pd.DataFrame:\n",
+    "        if self.column_normalizations is None:\n",
+    "            return df\n",
+    "        df = df.copy()\n",
+    "        for column, normalize_func in self.column_normalizations.items():\n",
+    "            df[column] = df[column].apply(normalize_func)\n",
+    "        return df\n",
     "\n",
-    "def _sequence_to_indices(sequence: Iterable[str], \n",
-    "                char_to_idx_mapping_fun: Callable[[str], int] = char_to_idx.get) -> np.ndarray:\n",
-    "    return np.array([char_to_idx_mapping_fun(char) for char in sequence], dtype=np.int8)\n",
+    "    def pad_array_columns(self, df: pd.DataFrame) -> pd.DataFrame:\n",
+    "        if len(df) == 0:\n",
+    "            return df\n",
     "\n",
-    "def sequence_column_to_indices(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    df = df.copy()\n",
-    "    df[SEQ] = df[SEQ].apply(list).apply(_sequence_to_indices)\n",
-    "    return df\n",
+    "        df = df.copy()\n",
+    "        for column, padding_length in self.padding_lengths.items():\n",
+    "            item_dtype = df[column].iloc[0].dtype\n",
     "\n",
-    "def stack_numpy_arrays_in_dataframe(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    return df.apply(lambda item: [np.stack(item)])\n",
+    "            df[column] = list(tf.keras.preprocessing.sequence.pad_sequences(\n",
+    "                sequences=df[column],\n",
+    "                maxlen=padding_length,\n",
+    "                padding='post',\n",
+    "                value=self.padding_characters[column],\n",
+    "                dtype=item_dtype\n",
+    "            ))\n",
+    "        return df\n",
     "\n",
-    "def preprocess_dataframe(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    df = normalize_intensities(df)\n",
-    "    df = pad_sequence_column(df)\n",
-    "    df = pad_array_columns(df)\n",
-    "    df = sequence_column_to_indices(df)\n",
-    "    df = stack_numpy_arrays_in_dataframe(df)\n",
-    "    return df\n",
+    "    @staticmethod\n",
+    "    def _sequence_to_indices(sequence: Iterable[str],\n",
+    "                             char_to_idx_mapping_func: Callable[[str], int],\n",
+    "                             dtype: type) -> np.ndarray:\n",
+    "        return np.array([char_to_idx_mapping_func(char) for char in sequence],\n",
+    "                        dtype=dtype)\n",
     "\n",
-    "def df2dataset(stacked_df: pd.DataFrame) -> tf.data.Dataset:\n",
-    "    training_data = tuple(stacked_df[ARRAY_COLS].iloc[0])\n",
-    "    target_data = tuple(stacked_df[[SEQ]].iloc[0])\n",
-    "    dataset = tf.data.Dataset.from_tensor_slices((training_data, target_data))\n",
-    "    return dataset\n",
-    "    \n",
-    "def parquet_file_to_dataset_file_converter(item: Tuple[int, str]) -> str:\n",
-    "    idx, path = item\n",
-    "    tf_dataset_path = os.path.join(\n",
-    "        DATASET_DUMP_PATH, \n",
-    "        path[len(TRAINING_COLUMNS_DUMP_PATH)+len(os.path.sep):])\n",
-    "    if os.path.exists(tf_dataset_path):\n",
-    "        logger.debug(f\"Skipped '{path}' because '{tf_dataset_path}' already exists\")\n",
-    "        return None\n",
-    "    \n",
-    "    info_text = f\"Processing item {idx + 1}/{len(MZMLID_FILE_PATHS)}: '{path}'\"\n",
-    "    if idx % 10 == 0:\n",
-    "        logger.info(info_text)\n",
-    "    else:\n",
-    "        logger.debug(info_text)\n",
-    "    df = pd.read_parquet(path)\n",
-    "    df = preprocess_dataframe(df)\n",
-    "    dataset = df2dataset(df)\n",
-    "    logger.debug(dataset.element_spec)\n",
-    "    \n",
-    "    tf.data.experimental.save(dataset=dataset, path=tf_dataset_path, compression='GZIP')\n",
-    "    \n",
-    "    del dataset\n",
-    "    del df\n",
-    "    gc.collect()\n",
-    "    \n",
-    "    return tf_dataset_path"
+    "    def sequence_column_to_indices(self, df: pd.DataFrame) -> pd.DataFrame:\n",
+    "        if len(self.char_to_idx_mapping_functions) == 0:\n",
+    "            return df\n",
+    "        df = df.copy()\n",
+    "        for column, mapping_function in self.char_to_idx_mapping_functions.items():\n",
+    "            df[column] = df[column].apply(lambda seq: self._sequence_to_indices(seq,\n",
+    "                                                                                mapping_function,\n",
+    "                                                                                self.char_idx_dtype))\n",
+    "        return df\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def stack_numpy_arrays_in_dataframe(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "        return df.apply(lambda item: [np.stack(item)])\n",
+    "\n",
+    "    def preprocess_dataframe(self, df: pd.DataFrame) -> pd.DataFrame:\n",
+    "        df = self.normalize_columns(df)\n",
+    "        df = self.pad_array_columns(df)\n",
+    "        df = self.sequence_column_to_indices(df)\n",
+    "        df = self.stack_numpy_arrays_in_dataframe(df)\n",
+    "        return df\n",
+    "\n",
+    "    def stacked_df_to_dataset(self, stacked_df: pd.DataFrame) -> tf.data.Dataset:\n",
+    "        assert len(stacked_df) == 1, \"all column values should be stacked at this point\"\n",
+    "        training_data = tuple(stacked_df[self.training_data_columns].iloc[0])\n",
+    "        target_data = tuple(stacked_df[self.target_data_columns].iloc[0])\n",
+    "        tf_dataset = tf.data.Dataset.from_tensor_slices((training_data, target_data))\n",
+    "        return tf_dataset\n",
+    "\n",
+    "    def convert_df_file_to_dataset_file(self,\n",
+    "                                        df_input_file_path: str,\n",
+    "                                        tf_dataset_output_file_path: str):\n",
+    "        df = pd.read_parquet(df_input_file_path)\n",
+    "        df = self.preprocess_dataframe(df)\n",
+    "        tf_dataset = self.stacked_df_to_dataset(df)\n",
+    "        self.logger.debug(tf_dataset.element_spec)\n",
+    "\n",
+    "        tf.data.experimental.save(dataset=tf_dataset,\n",
+    "                                  path=tf_dataset_output_file_path,\n",
+    "                                  compression='GZIP')\n",
+    "\n",
+    "    def __call__(self, item: Tuple[int, str]) -> Optional[str]:\n",
+    "        idx, path = item\n",
+    "        tf_dataset_path = os.path.join(\n",
+    "            self.dataset_dump_path,\n",
+    "            path[len(self.training_columns_dump_path)+len(os.path.sep):])\n",
+    "\n",
+    "        info_text = f\"Processing item {idx + 1}/{self.item_count}: '{path}'\"\n",
+    "        if idx % 10 == 0:\n",
+    "            self.logger.info(info_text)\n",
+    "        else:\n",
+    "            self.logger.debug(info_text)\n",
+    "\n",
+    "        if os.path.exists(tf_dataset_path):\n",
+    "            self.logger.debug(f\"Skipped '{path}' because '{tf_dataset_path}' already exists\")\n",
+    "            return None\n",
+    "\n",
+    "        self.convert_df_file_to_dataset_file(df_input_file_path=path,\n",
+    "                                             tf_dataset_output_file_path=tf_dataset_path)\n",
+    "        gc.collect()\n",
+    "\n",
+    "        return tf_dataset_path\n",
+    "\n",
+    "    def process(self, parquet_file_paths: Iterable[str], **kwargs) -> List[str]:\n",
+    "        item_processor = ItemProcessor(\n",
+    "            items=enumerate(parquet_file_paths),\n",
+    "            item_processor=self.__call__,\n",
+    "            action_name=\"parquet2tf_dataset-process\",\n",
+    "            subject_name=\"mzmlid parquet file\",\n",
+    "            logger=self.logger,\n",
+    "            **kwargs\n",
+    "        )\n",
+    "        results = list(item_processor.process())\n",
+    "        return results"
    ]
   },
   {
@@ -668,19 +705,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: Processing item 11/40: '../dumps/PXD010000/training_columns/Biodiversity_A_tumefaciens_R2A_aerobic_1_23Nov16_Pippin_16-09-11_mzmlid.parquet'\n",
-      "INFO: Processing item 21/40: '../dumps/PXD010000/training_columns/Biodiversity_B_cereus_PN_L_CL_3_09Oct16_Pippin_16-05-06_mzmlid.parquet'\n",
-      "INFO: Processing item 31/40: '../dumps/PXD010000/training_columns/Biodiversity_B_fragilis_CMcarb_anaerobic_03_01Feb16_Arwen_15-07-13_mzmlid.parquet'\n",
-      "INFO: Successfully parquet2tf_dataset-processed 37 mzmlid parquet files\n",
+      "INFO: No mzmlid parquet files were parquet2tf_dataset-processed\n",
       "INFO: Encountered 0 exceptions during processing\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['../dumps/PXD010000/training_columns/tf_datasets/Biodiversity_B_cereus_PN_L_CL_2_09Oct16_Pippin_16-05-06_mzmlid.parquet',\n",
-       " '../dumps/PXD010000/training_columns/tf_datasets/Biodiversity_A_faecalis_LB_aerobic_02_26Feb16_Arwen_16-01-01_mzmlid.parquet',\n",
-       " '../dumps/PXD010000/training_columns/tf_datasets/Biodiversity_B_cereus_ATCC14579_LB_aerobic_3_17July16_Samwise_16-04-10_mzmlid.parquet']"
+       "[]"
       ]
      },
      "execution_count": 22,
@@ -689,6 +721,7 @@
     }
    ],
    "source": [
+    "# replace with function call to process #TODO\n",
     "list(ItemProcessor(\n",
     "    items=enumerate(MZMLID_FILE_PATHS),\n",
     "    item_processor=parquet_file_to_dataset_file_converter,\n",
@@ -713,6 +746,13 @@
    "id": "fundamental-karen",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -824,12 +864,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "ba5cf115",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<BatchDataset shapes: (((None, 1845), (None, 1845)), (None, 50)), types: ((tf.float32, tf.float32), tf.int8)>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dataset = dataset.batch(BATCH_SIZE)"
+    "dataset = dataset.batch(BATCH_SIZE)\n",
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e68066a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAssertionError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-30-a871fdc9ebee>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0;32massert\u001B[0m \u001B[0;32mFalse\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;31mAssertionError\u001B[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "assert False"
    ]
   },
   {
