adapt dataset loader

--- a/notebooks/210610_2 Model Training.ipynb
+++ b/notebooks/210610_2 Model Training.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "from mmproteo.utils import log, paths, utils, visualization\n",
     "from mmproteo.utils.formats.mz import FilteringProcessor, MzmlidFileStatsCreator\n",
-    "from mmproteo.utils.formats.tf_dataset import Parquet2DatasetFileProcessor\n",
+    "from mmproteo.utils.formats.tf_dataset import Parquet2DatasetFileProcessor, DatasetLoader\n",
     "from mmproteo.utils.processing import ItemProcessor"
    ]
   },
@@ -199,27 +199,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c094281b",
-   "metadata": {},
-   "source": [
-    "### ... by species annotation with train-test-eval split"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "ee8aadcf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "KEEP_CACHE = True  # currently, there is no cache; the flag only disables benchmarking"
+    "KEEP_CACHE = True"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b3c2525a",
+   "id": "7ee8ccc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TRAINING_TYPE = 'Train'\n",
+    "TEST_TYPE = 'Test'\n",
+    "EVAL_TYPE = 'Eval'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d899c4f7",
    "metadata": {},
    "outputs": [
     {
@@ -248,9 +252,9 @@
     "    ),\n",
     "    path_position = -2,\n",
     "    splits = {\n",
-    "            \"Train\": 0.4,\n",
-    "            \"Test\": 0.5,\n",
-    "            \"Eval\": 0.6\n",
+    "            TRAINING_TYPE: 0.4,\n",
+    "            TEST_TYPE: 0.5,\n",
+    "            EVAL_TYPE: 0.6\n",
     "        },\n",
     "    paths_dump_file = os.path.join(\n",
     "            DATASET_DUMP_PATH,\n",
@@ -275,172 +279,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "stupid-malaysia",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((TensorSpec(shape=(2354,), dtype=tf.float32, name=None),\n",
+       "  TensorSpec(shape=(2354,), dtype=tf.float32, name=None)),\n",
+       " TensorSpec(shape=(50,), dtype=tf.int8, name=None))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "element_spec = ((tf.TensorSpec(shape=(PADDING_LENGTHS[MZ],), dtype=tf.float32), \n",
-    "  tf.TensorSpec(shape=(PADDING_LENGTHS[INT],), dtype=tf.float32)),\n",
-    "(tf.TensorSpec(shape=(PADDING_LENGTHS[SEQ],), dtype=tf.int8)))\n",
+    "element_spec = ((tf.TensorSpec(shape=(PROCESSING_INFO['padding_lengths'][MZ],), dtype=tf.float32), \n",
+    "  tf.TensorSpec(shape=(PROCESSING_INFO['padding_lengths'][INT],), dtype=tf.float32)),\n",
+    "(tf.TensorSpec(shape=(PROCESSING_INFO['padding_lengths'][SEQ],), dtype=tf.int8)))\n",
     "element_spec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "aebc3d6a",
+   "execution_count": 13,
+   "id": "e09b0dab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.6/dist-packages/tensorflow/python/data/ops/dataset_ops.py:1640: UserWarning: The `deterministic` argument has no effect unless the `num_parallel_calls` argument is specified.\n",
+      "  warnings.warn(\"The `deterministic` argument has no effect unless the \"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Train': <BatchDataset shapes: (((32, 2354), (32, 2354)), (32, 50)), types: ((tf.float32, tf.float32), tf.int8)>,\n",
+       " 'Test': <BatchDataset shapes: (((32, 2354), (32, 2354)), (32, 50)), types: ((tf.float32, tf.float32), tf.int8)>,\n",
+       " 'Eval': <BatchDataset shapes: (((32, 2354), (32, 2354)), (32, 50)), types: ((tf.float32, tf.float32), tf.int8)>}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "merged_datasets = {\n",
-    "    training_data_type: tf.data.Dataset.from_tensor_slices(paths).interleave(\n",
-    "        lambda path: \n",
-    "            tf.data.experimental.load(\n",
-    "                path=path, \n",
-    "                element_spec=element_spec, \n",
-    "                compression='GZIP'\n",
-    "            ),\n",
-    "         num_parallel_calls=os.cpu_count(),\n",
-    "         deterministic=False\n",
-    "    )\n",
-    "    for training_data_type, paths in dataset_file_paths.items()\n",
-    "}\n",
-    "\n",
-    "merged_datasets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "according-difficulty",
-   "metadata": {},
-   "source": [
-    "## Configuring Tensorflow Datasets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba9ffb49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "BATCH_SIZE = 32\n",
-    "\n",
-    "# although not all data fits into a 100k buffer, the interleaving should make it sufficiently random\n",
-    "SHUFFLE_BUFFER_SIZE = 2*10**5"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a73b141e",
-   "metadata": {},
-   "source": [
-    "### Caching (currently abandoned because of too high RAM usage)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "d4a97453",
-   "metadata": {},
-   "source": [
-    "CACHED_DATASET_DUMP_PATH = os.path.join(DATASET_DUMP_PATH, \"cache\")\n",
-    "\n",
-    "try:\n",
-    "    if not KEEP_CACHE:\n",
-    "        shutil.rmtree(CACHED_DATASET_DUMP_PATH)\n",
-    "except FileNotFoundError:\n",
-    "    pass\n",
-    "\n",
-    "utils.ensure_dir_exists(CACHED_DATASET_DUMP_PATH)\n",
-    "print(CACHED_DATASET_DUMP_PATH)\n",
-    "\n",
-    "merged_datasets = {\n",
-    "    training_data_type: dataset.cache(os.path.join(CACHED_DATASET_DUMP_PATH, training_data_type))\n",
-    "    for training_data_type, dataset in merged_datasets.items()\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2b491f44",
-   "metadata": {},
-   "source": [
-    "### Preloading"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c881d95",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fill_cache(dataset, name: Optional[str] = None):\n",
-    "    \"\"\"\n",
-    "    Use a benchmark to once process the whole dataset.\n",
-    "    \"\"\"\n",
-    "    if name is not None:\n",
-    "        print(f\"{name}:\")\n",
-    "    display(tfds.benchmark(dataset))\n",
-    "    gc.collect()\n",
-    "    logger.info(\"filled a cache - waiting 10 seconds\")\n",
-    "    print()\n",
-    "    time.sleep(10)\n",
-    "    return dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a7a9729",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if not KEEP_CACHE:\n",
-    "    merged_datasets = {\n",
-    "        training_data_type: fill_cache(dataset, name=training_data_type)\n",
-    "        for training_data_type, dataset in merged_datasets.items()\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6d7ee6a5",
-   "metadata": {},
-   "source": [
-    "### Shuffling, Batching, Prefetching"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2cbc0466",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "merged_datasets = {\n",
-    "    training_data_type: dataset\n",
-    "        .shuffle(SHUFFLE_BUFFER_SIZE, reshuffle_each_iteration=True)\n",
-    "        .batch(BATCH_SIZE, drop_remainder=True)\n",
-    "        .prefetch(tf.data.experimental.AUTOTUNE)\n",
-    "    for training_data_type, dataset in merged_datasets.items()\n",
-    "}\n",
-    "merged_datasets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ee8ccc7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TRAINING_TYPE = 'Train'\n",
-    "TEST_TYPE = 'Test'\n",
-    "EVAL_TYPE = 'Eval'"
+    "datasets = DatasetLoader(\n",
+    "    element_spec=element_spec,\n",
+    "    batch_size=32,\n",
+    "    shuffle_buffer_size=200_000,\n",
+    "    keep_cache=KEEP_CACHE,\n",
+    "    logger=logger\n",
+    ").load_datasets_by_type(dataset_file_paths)\n",
+    "datasets"
    ]
   },
   {
