adapt mmproteo ml layers

--- a/notebooks/210610_2 Model Training.ipynb
+++ b/notebooks/210610_2 Model Training.ipynb
@@ -33,6 +33,7 @@
     "from tensorflow.python import keras as K\n",
     "\n",
     "from mmproteo.utils import log, paths, utils, visualization\n",
+    "from mmproteo.utils.ml import layers\n",
     "from mmproteo.utils.formats.mz import FilteringProcessor, MzmlidFileStatsCreator\n",
     "from mmproteo.utils.formats.tf_dataset import Parquet2DatasetFileProcessor, DatasetLoader\n",
     "from mmproteo.utils.processing import ItemProcessor"
@@ -223,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d899c4f7",
+   "id": "d696d51d",
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e09b0dab",
+   "id": "fbef3700",
    "metadata": {},
    "outputs": [
     {
@@ -351,48 +352,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dress-linux",
+   "execution_count": 14,
+   "id": "ce5d17de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<KerasTensor: shape=(None, 2354) dtype=float32 (created by layer 'masked_mz_array')>,\n",
+       " <KerasTensor: shape=(None, 2354) dtype=float32 (created by layer 'masked_intensity_array')>]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "named_input_layers = {col: tf.keras.layers.Input(shape=(PADDING_LENGTHS[col],), name=col) for col in TRAINING_DATA_COLUMNS}\n",
-    "named_input_layers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d489e61a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "named_input_layers_list = [ named_input_layers[col] for col in TRAINING_DATA_COLUMNS ]\n",
-    "named_input_layers_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "387e127d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "masked_input_layers = {\n",
-    "    col: tf.keras.layers.Masking(mask_value=PADDING_CHARACTERS[col], name=f\"masked_{col}\")(input_layer)\n",
-    "    for col, input_layer in named_input_layers.items()\n",
-    "}\n",
-    "masked_input_layers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14d2218b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "masked_input_layers_list = [ masked_input_layers[col] for col in TRAINING_DATA_COLUMNS ]\n",
+    "masked_input_layers_list = layers.create_masked_input_layers(\n",
+    "    [\n",
+    "        layers.InputLayerConfiguration(\n",
+    "            name=col,\n",
+    "            shape=PROCESSING_INFO['padding_lengths'][col],\n",
+    "            mask_value=PROCESSING_INFO['padding_characters'][col]\n",
+    "        )\n",
+    "        for col in TRAINING_DATA_COLUMNS\n",
+    "    ]\n",
+    ")\n",
     "masked_input_layers_list"
    ]
   },
